--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <div class="input">
                 <input class="uno" type="text" placeholder="Email" name="uname" required >
                 <input class="dos" type="password" placeholder="Contraseña" name="uname" required>
-                <button>Sign in</button>
+                <button class="button">Sign in</button>
             </div>
         </article>
         <main class="main">
