--- a/pagina1.html
+++ b/pagina1.html
@@ -28,54 +28,54 @@
     </nav>
 
     <main class="container">
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/yuca.jpg" alt="" >
             <p>
                 Yuca <br>
                 Precio: $100 <br>
                 Unidades: 4 <br>
                 Ventas: 0 <br>
-                Total Ventas: 0 
+                Total Ventas: 0
             </p>
         </div>
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/lechuga.jpg" alt="" >
             <p>
                 Lechuga <br>
                 Precio: $200 <br>
                 Unidades: 6 <br>
                 Ventas: 2 <br>
-                Total Ventas: 400 
+                Total Ventas: 400
             </p>
         </div>
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/Papa.png" alt="" >
             <p>
                 Papa <br>
                 Precio: $500 <br>
                 Unidades: 10 <br>
                 Ventas: 5 <br>
-                Total Ventas: 2500 
+                Total Ventas: 2500
             </p>
         </div>
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/mango.jpg" alt="" >
             <p>
                 Mango <br>
                 Precio: $100 <br>
                 Unidades: 2 <br>
                 Ventas: 1 <br>
-                Total Ventas: 100 
+                Total Ventas: 100
             </p>
         </div>
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/papas.jpg" alt="" >
             <p>
                 Papas Naturales <br>
                 Precio: $300 <br>
                 Unidades: 2 <br>
                 Ventas: 1 <br>
-                Total Ventas: 300 
+                Total Ventas: 300
             </p>
         </div>
         <div class="button">
