--- a/pagina2.html
+++ b/pagina2.html
@@ -28,21 +28,21 @@
     </nav>
 
     <main class="container">
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/yuca.jpg" alt="" >
             <p>
                 VERDURAS <br>
-                3 artículos disponibles 
+                3 artículos disponibles
             </p>
         </div>
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/mango.jpg" alt="" >
             <p>
                 FRUTAS <br>
                 1 artículos disponibles
             </p>
         </div>
-        <div class="clases">
+        <div class="class">
             <img src="Imagenes/papas.jpg" alt="" >
             <p>
                 MECATO <br>
