--- a/pagina3.html
+++ b/pagina3.html
@@ -33,23 +33,23 @@
     </section>
     <main>
         <nav class="navegacion">
-            <ul class="menu">
+            <ul class="main">
                 <li><a href="">Elegir Categoría</a>
                     <ul>
                         <li><a href="">Verduras</a></li>
                         <li><a href="">Frutas</a></li>
                         <li><a href="">Mecato</a></li>
-                    </ul>  
+                    </ul>
                 </li>
             </ul>
         </nav>
     </main>
-    <main class="tablas">
+    <main class="tables">
         <!-- tablas -->
-        <table class="tabla">
+        <table class="table">
             <colgroup>
-                <col span="2" class="tabla-colpri"/>
-                <col class ="tabla-col" />
+                <col span="2" class="table-colpri"/>
+                <col class ="table-col" />
             </colgroup>
             <!-- nombres de la tabla -->
             <thead>
