--- a/pagina3.html
+++ b/pagina3.html
@@ -26,13 +26,13 @@
             </li>
         </ul>
     </nav>
-    <section class="mensaje">
+    <section class="msg">
         <h2>
             Elegir categoria en menú desplegable
         </h2>
     </section>
     <main>
-        <nav class="navegacion">
+        <nav class="navegation">
             <ul class="main">
                 <li><a href="">Elegir Categoría</a>
                     <ul>
